refactor: visual animation logic

--- a/web/style.css
+++ b/web/style.css
@@ -206,12 +206,13 @@ button.danger {
   background-color: #ffccc8;
 }
 
-.floor-list li .floor-container .person-indicator {
-  display: none;
-}
-
-.floor-list li .floor-container .person-indicator.show {
-  display: block;
+.floor-list li .floor-waiting {
+  padding: 10px 20px;
+  height: 50px;
+  width: 50px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
 }
 
 .floor-list li .floor-outside {
@@ -219,7 +220,7 @@ button.danger {
   height: 50px;
   width: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 
