--- a/web/style.css
+++ b/web/style.css
@@ -157,12 +157,20 @@ button.danger {
   color: #a3a3a3;
 }
 
+.elevator-view {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .floor-list {
   display: flex;
   flex-direction: column-reverse;
   list-style-type: none;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 
 .floor-list li {
